<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".post.feelings.FeelingsActivity">


    <LinearLayout
        android:id="@+id/feeling_activity_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <br.com.goin.component.ui.kit.toolbar.GoinToolbar
            android:id="@+id/toolbar_feelings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </br.com.goin.component.ui.kit.toolbar.GoinToolbar>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/my_feeling"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:weightSum="4">

                <LinearLayout
                    android:id="@+id/feeling_contente"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:tag="glad">

                    <androidx.emoji.widget.EmojiTextView
                        android:id="@+id/emoji_text_glad"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_medium"
                        android:text="@string/emoji_glad"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/feeling_descolado"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:tag="cool">

                    <androidx.emoji.widget.EmojiTextView
                        android:id="@+id/emoji_text_cool"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_medium"
                        android:text="@string/emoji_cool"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/feeling_sedutor"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:tag="seductive">

                    <androidx.emoji.widget.EmojiTextView
                        android:id="@+id/emoji_text_seductive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_medium"
                        android:text="@string/emoji_seductive"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:weightSum="4">

                <LinearLayout
                    android:id="@+id/feeling_empolgado"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:tag="excited">

                    <androidx.emoji.widget.EmojiTextView
                        android:id="@+id/emoji_text_excited"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_medium"
                        android:text="@string/emoji_excited"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/feeling_ansioso"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:tag="anxious">

                    <androidx.emoji.widget.EmojiTextView
                        android:id="@+id/emoji_text_anxious"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_medium"
                        android:text="@string/emoji_anxious"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/feeling_bravo"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:tag="angry">

                    <androidx.emoji.widget.EmojiTextView
                        android:id="@+id/emoji_text_angry"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_medium"
                        android:text="@string/emoji_angry"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:weightSum="4">

                <LinearLayout
                    android:id="@+id/feeling_feliz"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:tag="happy">

                    <androidx.emoji.widget.EmojiTextView
                        android:id="@+id/emoji_text_happy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_medium"
                        android:text="@string/emoji_happy"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/feeling_alegre"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:tag="joyful">

                    <androidx.emoji.widget.EmojiTextView
                        android:id="@+id/emoji_text_joyful"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_medium"
                        android:text="@string/emoji_joyful"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/feeling_enjoado"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:tag="sick">

                    <androidx.emoji.widget.EmojiTextView
                        android:id="@+id/emoji_text_sick"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand_medium"
                        android:text="@string/emoji_sick"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>

